src/App.css
@import url("https://fonts.googleapis.com/css2?family=Manjari:wght@100;400;700&display=swap");

body {
  margin: 0;
  padding: 0;
  font-family: "Manjari", sans-serif;
  background-color: #121212;
  color: #e0e0e0;
}

.app-container {
  display: flex;
  height: 100vh;
}

.sidebar {
  width: 250px;
  background-color: #111;
  color: white;
}

.main-content {
  flex: 1;
  padding: 20px;
  overflow-y: auto;
}

